Fix selects for advanced search on mobile

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -554,6 +554,11 @@
     display: none;
   }
 
+  .filter-form__select {
+    max-width: 100%;
+    font-size: 16px;
+  }
+
 
 
   .nav-welt {
